corrected the overflow problem, created sections in html and deleted both previous.html and pie-chart.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,9 +9,9 @@ body {
 /* Background Image */
 
 body {
-    background-image: url('../images/background.jpeg') center center cover no-repeat fixed; 
+    background-image: url('../images/background.jpeg') center center cover no-repeat fixed;
     height: 100%;
-    width: 100%;
+    width: auto;
 }
 
 /* Header */
@@ -25,7 +25,7 @@ body {
 .navbar {
     padding-bottom: 20px;
     width: 100%;
-    
+
 }
 
 .navbar-brand {
@@ -35,6 +35,7 @@ body {
 
 
 /* Stacked Bar Chart */
+
 .stacked {
     float: left;
     width: 50%;
@@ -54,12 +55,16 @@ body {
     font-size: 11px;
 
 }
+
 /* Media Queries */
 
-@media only screen and (min-width: 992px) {
-  body {
-    background-image: url('../images/background.jpeg');
-  }
+@media (min-width: 992px) {
+    body {
+        background-image: url('../images/background.jpeg');
+        overflow-x: hidden;
+        height: 100%;
+        width: auto;
+    }
 }
 
 /*---Container----*/
